Fix letter spacing in IconLabels – Design feedback

--- a/app/components/icon-label/_theme.scss
+++ b/app/components/icon-label/_theme.scss
@@ -14,5 +14,6 @@
 
     font-size: 11px;
     line-height: $unit*1.5;
+    letter-spacing: 0;
     text-transform: lowercase;
 }
